{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 31,
  "lineage": "d0651915-8266-7711-e8d1-dec0c11f38d3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat-Gateway-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dea2ed1aae46100e",
            "domain": "vpc",
            "id": "eipalloc-0dea2ed1aae46100e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-199-27-69.compute-1.amazonaws.com",
            "public_ip": "44.199.27.69",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:882118399350:loadbalancer/app-lb",
            "availability_zones": [
              "us-east-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-1479146904.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 15,
                "unhealthy_threshold": 2
              }
            ],
            "id": "app-lb",
            "idle_timeout": 60,
            "instances": [
              "i-0056e665089b48c51",
              "i-0f359cab5f1119acb",
              "i-0fb38997c0c99f8d3"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "TCP",
                "lb_port": 80,
                "lb_protocol": "TCP"
              }
            ],
            "name": "app-lb",
            "security_groups": [
              "sg-0e807410b42701546"
            ],
            "source_security_group": "882118399350/k8s-api",
            "source_security_group_id": "sg-0e807410b42701546",
            "subnets": [
              "subnet-0b3fb3193df573b19"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.worker",
            "aws_key_pair.sh-key-for-me",
            "aws_security_group.app-lb",
            "aws_security_group.private",
            "aws_subnet.public_subnet",
            "aws_subnet.worker_subnet",
            "aws_vpc.main_VPC",
            "data.aws_ami.amzn-linux-ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08938d43921654967",
            "arn": "arn:aws:ec2:us-east-1:882118399350:instance/i-05f6b20044b57526c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f6b20044b57526c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "My_Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01d28040b9ab71887",
            "private_dns": "ip-10-0-1-165.ec2.internal",
            "private_ip": "10.0.1.165",
            "public_dns": "ec2-54-208-33-240.compute-1.amazonaws.com",
            "public_ip": "54.208.33.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-037067c92634f3fff",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b3fb3193df573b19",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05dcc731e4ae2daa0"
            ]
          },
          "dependencies": [
            "aws_key_pair.sh-key-for-me",
            "aws_security_group.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main_VPC",
            "data.aws_ami.amzn-linux-ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08938d43921654967",
            "arn": "arn:aws:ec2:us-east-1:882118399350:instance/i-00c5f6d4d2883e186",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c5f6d4d2883e186",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "My_Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ff58488682552729",
            "private_dns": "ip-10-0-1-95.ec2.internal",
            "private_ip": "10.0.1.95",
            "public_dns": "ec2-44-202-58-26.compute-1.amazonaws.com",
            "public_ip": "44.202.58.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0ae9802f04ba8ba90",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b3fb3193df573b19",
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05dcc731e4ae2daa0"
            ]
          },
          "dependencies": [
            "aws_key_pair.sh-key-for-me",
            "aws_security_group.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main_VPC",
            "data.aws_ami.amzn-linux-ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08938d43921654967",
            "arn": "arn:aws:ec2:us-east-1:882118399350:instance/i-05316d2ec3443db07",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05316d2ec3443db07",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "My_Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0198d756529f5a9c0",
            "private_dns": "ip-10-0-1-70.ec2.internal",
            "private_ip": "10.0.1.70",
            "public_dns": "ec2-34-226-249-229.compute-1.amazonaws.com",
            "public_ip": "34.226.249.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0c92b16df144b70ba",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b3fb3193df573b19",
            "tags": {
              "Name": "lb"
            },
            "tags_all": {
              "Name": "lb"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05dcc731e4ae2daa0"
            ]
          },
          "dependencies": [
            "aws_key_pair.sh-key-for-me",
            "aws_security_group.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main_VPC",
            "data.aws_ami.amzn-linux-ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08938d43921654967",
            "arn": "arn:aws:ec2:us-east-1:882118399350:instance/i-039bc1f109fd16d18",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039bc1f109fd16d18",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "My_Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-004daaf8b3ea3dc27",
            "private_dns": "ip-10-0-2-118.ec2.internal",
            "private_ip": "10.0.2.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0b5b643a5bdd5ad4c",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09aa4cb0f2999a025",
            "tags": {
              "Name": "master"
            },
            "tags_all": {
              "Name": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f4b9df12df26b7a6"
            ]
          },
          "dependencies": [
            "aws_key_pair.sh-key-for-me",
            "aws_security_group.app-lb",
            "aws_security_group.private",
            "aws_subnet.worker_subnet",
            "aws_vpc.main_VPC",
            "data.aws_ami.amzn-linux-ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08938d43921654967",
            "arn": "arn:aws:ec2:us-east-1:882118399350:instance/i-0fb38997c0c99f8d3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb38997c0c99f8d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "My_Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c2c5a792dc2ed4cd",
            "private_dns": "ip-10-0-2-110.ec2.internal",
            "private_ip": "10.0.2.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-077af05e03c372e31",
                "volume_size": 16,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09aa4cb0f2999a025",
            "tags": {
              "Name": "worker-0"
            },
            "tags_all": {
              "Name": "worker-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f4b9df12df26b7a6"
            ]
          },
          "dependencies": [
            "aws_key_pair.sh-key-for-me",
            "aws_security_group.app-lb",
            "aws_security_group.private",
            "aws_subnet.worker_subnet",
            "aws_vpc.main_VPC",
            "data.aws_ami.amzn-linux-ec2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08938d43921654967",
            "arn": "arn:aws:ec2:us-east-1:882118399350:instance/i-0f359cab5f1119acb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f359cab5f1119acb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "My_Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0511c45f121f6d927",
            "private_dns": "ip-10-0-2-163.ec2.internal",
            "private_ip": "10.0.2.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0b9ea446b7a91b91c",
                "volume_size": 16,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09aa4cb0f2999a025",
            "tags": {
              "Name": "worker-1"
            },
            "tags_all": {
              "Name": "worker-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f4b9df12df26b7a6"
            ]
          },
          "dependencies": [
            "aws_key_pair.sh-key-for-me",
            "aws_security_group.app-lb",
            "aws_security_group.private",
            "aws_subnet.worker_subnet",
            "aws_vpc.main_VPC",
            "data.aws_ami.amzn-linux-ec2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08938d43921654967",
            "arn": "arn:aws:ec2:us-east-1:882118399350:instance/i-0056e665089b48c51",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0056e665089b48c51",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "My_Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09147267febd54e34",
            "private_dns": "ip-10-0-2-139.ec2.internal",
            "private_ip": "10.0.2.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0b654634e075ee925",
                "volume_size": 16,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09aa4cb0f2999a025",
            "tags": {
              "Name": "worker-2"
            },
            "tags_all": {
              "Name": "worker-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f4b9df12df26b7a6"
            ]
          },
          "dependencies": [
            "aws_key_pair.sh-key-for-me",
            "aws_security_group.app-lb",
            "aws_security_group.private",
            "aws_subnet.worker_subnet",
            "aws_vpc.main_VPC",
            "data.aws_ami.amzn-linux-ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882118399350:internet-gateway/igw-03a27dcf60d615b29",
            "id": "igw-03a27dcf60d615b29",
            "owner_id": "882118399350",
            "vpc_id": "vpc-0912e56bff754da59"
          },
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dea2ed1aae46100e",
            "connectivity_type": "public",
            "id": "nat-0f86f4d9acfe759de",
            "network_interface_id": "eni-0889dbcaab3b151f6",
            "private_ip": "10.0.1.83",
            "public_ip": "44.199.27.69",
            "subnet_id": "subnet-0b3fb3193df573b19",
            "tags": {
              "Name": "Nat-GW"
            },
            "tags_all": {
              "Name": "Nat-GW"
            }
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_subnet.public_subnet",
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882118399350:route-table/rtb-0a4c2847298f3ea6f",
            "id": "rtb-0a4c2847298f3ea6f",
            "owner_id": "882118399350",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a27dcf60d615b29",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-table"
            },
            "tags_all": {
              "Name": "main-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0912e56bff754da59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "worker_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882118399350:route-table/rtb-01e7490355c37e9e1",
            "id": "rtb-01e7490355c37e9e1",
            "owner_id": "882118399350",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f86f4d9acfe759de",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "workers-table"
            },
            "tags_all": {
              "Name": "workers-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0912e56bff754da59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_nat_gateway.NAT_GW",
            "aws_subnet.public_subnet",
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acd2f5e02fe6bba1",
            "route_table_id": "rtb-01e7490355c37e9e1",
            "subnet_id": "subnet-09aa4cb0f2999a025"
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_nat_gateway.NAT_GW",
            "aws_route_table.worker_table",
            "aws_subnet.public_subnet",
            "aws_subnet.worker_subnet",
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bc9f27d1635e156",
            "route_table_id": "rtb-0a4c2847298f3ea6f",
            "subnet_id": "subnet-0b3fb3193df573b19"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882118399350:security-group/sg-0e807410b42701546",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e807410b42701546",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "k8s-api",
            "name_prefix": "",
            "owner_id": "882118399350",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0912e56bff754da59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882118399350:security-group/sg-0f4b9df12df26b7a6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4b9df12df26b7a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0e807410b42701546"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220606100258875100000002",
            "name_prefix": "terraform-",
            "owner_id": "882118399350",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0912e56bff754da59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app-lb",
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882118399350:security-group/sg-05dcc731e4ae2daa0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05dcc731e4ae2daa0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 443",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 8080",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 8090 grafana",
                "from_port": 8090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 8090 grafana",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 8443",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220606100256328500000001",
            "name_prefix": "terraform-",
            "owner_id": "882118399350",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0912e56bff754da59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882118399350:subnet/subnet-0b3fb3193df573b19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3fb3193df573b19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "882118399350",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0912e56bff754da59"
          },
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "worker_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882118399350:subnet/subnet-09aa4cb0f2999a025",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09aa4cb0f2999a025",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "882118399350",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0912e56bff754da59"
          },
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882118399350:vpc/vpc-0912e56bff754da59",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c1a8a16c52689536",
            "default_route_table_id": "rtb-0e236b1ecd7be7a7a",
            "default_security_group_id": "sg-0d80f0f5bd24c35ad",
            "dhcp_options_id": "dopt-0851d75a7d47022c5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0912e56bff754da59",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e236b1ecd7be7a7a",
            "owner_id": "882118399350",
            "tags": {
              "Name": "k8s-cluster"
            },
            "tags_all": {
              "Name": "k8s-cluster"
            }
          }
        }
      ]
    }
  ]
}